<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logDisplayTextView"
        android:layout_width="390dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/exercise"
        app:layout_constraintTop_toBottomOf="@id/logDisplayTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/exerciseLabelTextView"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        android:hint="@string/enter_an_exercise"/>

    <TextView
        android:id="@+id/weightLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dip"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/exerciseLabelTextView" />

    <EditText
        android:id="@+id/weightInputEditText"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightLabelTextView"
        app:layout_constraintStart_toEndOf="@id/weightLabelTextView"
        android:hint="@string/enter_a_weight"/>

    <TextView
        android:id="@+id/repsLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dip"
        android:text="@string/reps"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/weightLabelTextView" />

    <EditText
        android:id="@+id/repsInputEditText"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/repsLabelTextView"
        app:layout_constraintStart_toEndOf="@id/repsLabelTextView"
        android:hint="@string/enter_reps"/>

    <Button
        android:layout_width="390dp"
        android:layout_height="205dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repsInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/log"
        android:textSize="36sp" />


</androidx.constraintlayout.widget.ConstraintLayout>